# utmpx

./: .gitignore  README.md  Y2038.md  utmp-to-logind.md
.github/workflows/: ci-opensuse.yml  meson-sanitizer.yml  meson.yml
coreutils/: pinky.c.diff  uptime.c.diff  users.c.diff
examples/: dump_utmp.c
libutmpld/: meson.build
libutmpld/example/: utmpld_set_tty.c
libutmpld/include/: utmpld.h
libutmpld/lib/: get_session_id.c  libutmpld.map  set_tty.c
libutmpld/tests/: meson.build  tst-set_tty.c
logindump/: README.md  meson.build
logindump/src/: basics.h  logind.c  logindump.h  main.c  strv.c  strv.h  utmpwtmp.c  wtmpdb.c
patches/coreutils/: README.md  local.mk.diff  pinky.c.diff  pinky.patch  uptime.c.diff  uptime.patch  users.c.diff  users.patch  who.c.diff  who.patch
patches/monitoring-plugins/: README.md  systemd-not-utmp.patch
patches/net-snmp/: README.md
patches/openssh/: README.md  logind-set-tty.patch  wtmpdb.patch
patches/procps-ng/: README.md  procps-ng-3.3.17-logind.patch  procps-ng-4.0.3-logind.patch
patches/psutil/: README.md  logind.patch
patches/rsyslog/: README.md  rsyslog-logind.patch
patches/samba/: README.md  samba-utmp-logind.patch
patches/util-linux/: README.md  lastlog2-support.patch  use-logind-not-utmp.patch
